Creates consumer page form
